<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FullDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/standard_margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/standard_radius">

        <ImageView
            android:id="@+id/image_view_pic_large"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:contentDescription="@string/content_des_user_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_image" />

    <LinearLayout
        android:id="@+id/linear_layout_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin_big"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_name"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_birthday"/>

        <TextView
            android:id="@+id/text_view_birthday"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout_name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_birthday"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_age"/>

        <TextView
            android:id="@+id/text_view_age"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_age"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_email"/>

        <TextView
            android:id="@+id/text_view_email"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_email"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_mobile"/>

        <TextView
            android:id="@+id/text_view_mobile"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_mobile"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_street"/>

        <TextView
            android:id="@+id/text_view_street"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_street"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_city"/>

        <TextView
            android:id="@+id/text_view_city"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_city"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_state"/>

        <TextView
            android:id="@+id/text_view_state"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_state"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_country"/>

        <TextView
            android:id="@+id/text_view_country"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginStart="@dimen/standard_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_country"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/DetailLabelText"
            android:layout_marginEnd="@dimen/space"
            android:text="@string/label_postcode"/>

        <TextView
            android:id="@+id/text_view_postcode"
            style="@style/DetailSubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>